--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -32,41 +32,35 @@ table td {
 							<table class="table" style="table-layout: fixed;">
 								<thead>
 									<tr>
-										<th scope="col">编号</th>
 										<th scope="col">发送人</th>
 										<th scope="col">内容</th>
-										<th scope="col">收件人</th>
+										<th scope="col">文件</th>
+										<th scope="col">收件职位</th>
 										<th scope="col">发送时间</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="item : ${list}">
-										<th scope="row"><b th:text="${item.id}">#122349</b></th>
-										<td scope="row"><b>张三</b></td>
+										<td scope="row"><b th:text="${item.user.uname}">张三</b></td>
 										<td scope="row" th:text="${item.content}">
 											睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉
 											睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉睡觉</td>
-										<td scope="row"><b th:text="${item.user.uname}">李四</b></td>
+										<td scope="row"><img th:src="${item.images.url}" /><!-- </b> --></td>
+										<td scope="row"><b th:text="${item.pos.postion}">李四</b></td>
 										<td scope="row"><b
-											th:text="${#dates.format(item.time,'yyyy-MM-dd HH:mm')}">2018-5-5</b></td>
+											th:text="${#dates.format(item.time,'yyyy-MM-dd')}">2018-5-5</b></td>
 									</tr>
-
 								</tbody>
 							</table>
 						</div>
 					</div>
 					<form action="/notice/addmessage" method="post"
-						 class="tm-signup-form row">
+						 class="tm-signup-form row" enctype="multipart/form-data">
 						<div class="form-group col-lg-12">
 							<label for="name">文件</label><br>
 							<P>
-								<input type="file" name="file" multiple="multiple">
-								<!-- <input type="file" name="file2"> -->
+								<input type="file" name="files" multiple="multiple">
 							</P>
-							<!-- <P>
-								<input type="file" name="file">
-								<input type="file" name="file4">
-							</P> -->
 						</div>
 						<div class="form-group col-lg-12">
 							<label for="name">消息内容</label>
@@ -89,7 +83,7 @@ table td {
 									</div>
 									<div id="" class="modal-body appe"></div>
 									<div id="" class="modal-footer">
-										<button type="submit" class="btn">提交</button> <a class="btn" data-dismiss="modal">关闭</a>
+										<button type="" class="btn nb">提交</button> <a class="btn" data-dismiss="modal">关闭</a>
 									</div>
 								</div>
 							</div>
@@ -118,10 +112,22 @@ table td {
 			$(".zhi").hide();
 			$(".n").click(function() {
 				$(".zhi").show();
-
 			})
+			
+			$(".nb").click(function(){
+				var file=$("[name=file]").val();
+				var content=$("[name=content]").val();
+				var pid=$("[name=pid]").val();
+				
+			})
+			
 
 			$("body").on("click", "table tr td:nth-of-type(2)", function() {
+				$(this).css("overflow", "initial")
+				$(this).css("white-space", "initial");
+				$(this).css("text-overflow", "initial");
+			})
+			$("body").on("click", "table tr td:nth-of-type(3)", function() {
 				$(this).css("overflow", "initial")
 				$(this).css("white-space", "initial");
 				$(this).css("text-overflow", "initial");
